# CoreColor

./: CMakeLists.txt  CoreColor.cpp  CoreColor.h  README.md  update_version.sh
CoreColor/: CoreColor.h
CoreColor/include/: Color.h  Convert.h  CoreColor_Utils.h
CoreColor/src/: Color.cpp  Convert.cpp
docs/: Doxyfile  mainpage.dox  site_info
ide/clion/: CMakeLists.txt  main.cpp
include/: Color.h  Convert.h  CoreColor.h  CoreColor_Utils.h
scripts/: update_version.sh
src/: Convert.cpp  CoreColor.cpp
